--- a/index.html
+++ b/index.html
@@ -9,14 +9,31 @@
 </head>
 <body>
     <header class="header">
-        <img src="./logo/logo.png" alt="logo-nav" class="logo">
+        <img src="./logo/Boca Juniors256x.png" alt="logo-nav" class="logo">
         <nav class="nav">
             <ul class="ul-list">
                 <li class="li-link"><a href="#">Inicio</a></li>
-                <li class="li-link"><a href="#">Contacto</a></li>
+                <li class="li-link"><a href="#">Productos</a></li>
                 <li class="li-link"><a href="#">Nosotros</a></li>
+                <li class="li-link"><a href="#">Contacto</a></li>
             </ul>
         </nav>
     </header>
+    <main class="container-main">
+        <section class="section-1">
+            <h2>UN SENTIMIENTO QUE MOVILIZA A MILLONES DE PERSONAS</h2>
+            <p>Boca Juniors es ese algo en común con los que sienten la pasión a cada paso, estén paseando por el mundo o caminando por las calles de Buenos Aires. Porque es ser parte de algo único. La prueba de que, con esfuerzo, pasión y entusiasmo, todo es posible.
+
+                Porque si La Boca hace más grande a Boca, los Xeneizes la volvimos República. Un lugar donde con sólo tararear un simple “Señores, yo soy de Boca desde la cuna”, te dan un pasaporte barrial, provincial, nacional, global, universal, interestelar.
+                
+                Porque si la Bombonera late no es ni más ni menos que por el corazón de todos aquellos que laten por Boca.
+                <b>
+                Es por eso que, por medio de nuestra tienda oficial Boke Shop, queremos acercarle a todos los Xeneizes los productos oficiales del club. Para llevar los colores azul y oro, vayan donde vayan. ¡Que la disfrutes! </b> </p>
+        </section>
+        <section class="section-2">
+            <img src="./logo/BocaShop2021-LaDeBoca_BannerMobile.webp" alt="indumentaria" class="img-boke">
+        </section>
+    </main>
+
 </body>
 </html>
